Bug 1977243 - Don't show bottom border for new tab button when vertical tabs are overflowing and the tools/extensions splitter is also showing r=tabbrowser-reviewers,sidebar-reviewers,nsharpley
Differential Revision: https://phabricator.services.mozilla.com/D259161

UltraBlame original commit: 39dfe3ec11ec11ed1b57acc451d3c55d3486b29c

--- a/browser/themes/shared/tabbrowser/tabs.css
+++ b/browser/themes/shared/tabbrowser/tabs.css
@@ -15172,6 +15172,145 @@ margin
 )
 ;
 }
+/
+*
+stylelint
+-
+disable
+-
+next
+-
+line
+media
+-
+query
+-
+no
+-
+invalid
+*
+/
+media
+not
+-
+moz
+-
+pref
+(
+"
+sidebar
+.
+visibility
+"
+"
+expand
+-
+on
+-
+hover
+"
+)
+{
+/
+*
+We
+need
+these
+rules
+to
+apply
+at
+all
+times
+when
+the
+sidebar
+.
+visibility
+pref
+is
+not
+set
+to
+"
+expand
+-
+on
+-
+hover
+"
+as
+opposed
+to
+when
+the
+"
+sidebar
+-
+expand
+-
+on
+-
+hover
+"
+attribute
+has
+not
+been
+added
+to
+root
+.
+There
+are
+certain
+scenarios
+when
+that
+attribute
+is
+temporarily
+removed
+from
+root
+such
+as
+when
+toggling
+the
+sidebar
+to
+expand
+with
+the
+toolbar
+button
+.
+*
+/
+&
+:
+not
+(
+[
+expanded
+]
+)
+[
+overflow
+]
+:
+:
+after
+{
+border
+-
+color
+:
+transparent
+;
+}
+}
 .
 tabbrowser
 -
